--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
+  "build": "sanity build",
   "dependencies": {
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
